Fix overlap in mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,7 +70,7 @@ h3 {
   font-weight: normal;
   font-size: 26;
   color: #ffffff;
-  line-height: 13px;
+  line-height: 22px;
   margin-left: 2px;
   margin-top: 2px;
   margin-bottom: 21px;
